// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultIcon: Component should render correctly 1`] = `
<result.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "600px",
      "stroke": "#000",
      "width": "600px",
    }
  }
/>
`;

exports[`ResultIcon: Component should render with custom styles 1`] = `
<result.svg
  style={
    Object {
      "fill": "blue",
      "height": "600px",
      "stroke": "#000",
      "width": "600px",
    }
  }
/>
`;
